--- a/package.json
+++ b/package.json
@@ -8,26 +8,28 @@
   "author": "Lelush",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "autoprefixer": "^9.6.5",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.26.7",
-    "del": "^3.0.0",
-    "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-babel": "^7.0.1",
-    "gulp-cache": "^1.0.2",
-    "gulp-clean-css": "^3.10.0",
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-cache": "^1.1.3",
+    "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-ftp": "^1.1.0",
     "gulp-group-css-media-queries": "^1.2.2",
-    "gulp-imagemin": "^4.1.0",
+    "gulp-imagemin": "^6.1.1",
+    "gulp-postcss": "^8.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.4",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
     "imagemin-jpeg-recompress": "^6.0.0",
-    "imagemin-pngquant": "^6.0.0",
+    "imagemin-pngquant": "^8.0.0",
     "pug": "^2.0.4",
     "smart-grid": "^2.1.2"
   },
@@ -35,5 +37,10 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1"
   },
-  "description": "My template for web."
+  "description": "My template for web.",
+  "browserslist": [
+    "last 15 version",
+    "maintained node versions",
+    "not dead"
+  ]
 }
