--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html_template",
+  "name": "online_store",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -8,8 +8,8 @@
   "author": "Lelush",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "autoprefixer": "^9.6.5",
+    "@babel/core": "^7.9.0",
+    "autoprefixer": "^9.7.6",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.26.7",
@@ -17,14 +17,14 @@
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.1.3",
-    "gulp-clean-css": "^4.2.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-ftp": "^1.1.0",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-imagemin": "^6.1.1",
     "gulp-postcss": "^8.0.0",
     "gulp-pug": "^4.0.1",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
