--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "author": "Lelush",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "autoprefixer": "^9.7.6",
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
+    "autoprefixer": "^9.8.6",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.26.7",
+    "browser-sync": "^2.26.12",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
@@ -21,16 +22,19 @@
     "gulp-concat": "^2.6.1",
     "gulp-ftp": "^1.1.0",
     "gulp-group-css-media-queries": "^1.2.2",
-    "gulp-imagemin": "^6.1.1",
+    "gulp-html-prettify": "0.0.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-nunjucks": "^5.0.1",
     "gulp-postcss": "^8.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
-    "imagemin-jpeg-recompress": "^6.0.0",
-    "imagemin-pngquant": "^8.0.0",
-    "pug": "^2.0.4",
+    "imagemin-jpeg-recompress": "^7.0.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-pngquant": "^9.0.0",
+    "pug": "^3.0.0",
     "smart-grid": "^2.1.2"
   },
   "dependencies": {
