--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "online_store",
+  "name": "template",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -8,13 +8,14 @@
   "author": "Lelush",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/preset-env": "^7.11.0",
-    "autoprefixer": "^9.8.6",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "autoprefixer": "^10.2.3",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.26.12",
-    "del": "^5.1.0",
+    "browser-sync": "^2.26.14",
+    "cross-env": "^7.0.3",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.1.3",
@@ -24,16 +25,17 @@
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-html-prettify": "0.0.1",
     "gulp-imagemin": "^7.1.0",
-    "gulp-nunjucks": "^5.0.1",
-    "gulp-postcss": "^8.0.0",
+    "gulp-nunjucks": "^5.1.0",
+    "gulp-postcss": "^9.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.1.0",
-    "gulp-sourcemaps": "^2.6.5",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
     "imagemin-jpeg-recompress": "^7.0.0",
     "imagemin-mozjpeg": "^9.0.0",
-    "imagemin-pngquant": "^9.0.0",
+    "imagemin-pngquant": "^9.0.1",
+    "postcss": "^8.2.4",
     "pug": "^3.0.0",
     "smart-grid": "^2.1.2"
   },
