--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-env": "^7.12.13",
     "autoprefixer": "^10.2.3",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
+    "babelify": "^10.0.0",
     "browser-sync": "^2.26.14",
+    "browserify": "^17.0.0",
     "cross-env": "^7.0.3",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
@@ -28,6 +30,7 @@
     "gulp-nunjucks": "^5.1.0",
     "gulp-postcss": "^9.0.0",
     "gulp-pug": "^4.0.1",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
@@ -37,11 +40,19 @@
     "imagemin-pngquant": "^9.0.1",
     "postcss": "^8.2.4",
     "pug": "^3.0.0",
-    "smart-grid": "^2.1.2"
+    "smart-grid": "^2.1.2",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "postcss-responsive-type": "^1.0.0"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
   },
   "description": "My template for web.",
   "browserslist": [
