--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "browserify": "^17.0.0",
     "cross-env": "^7.0.3",
     "del": "^6.0.0",
+    "gsap": "^3.7.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.1.3",
@@ -47,7 +48,8 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "postcss-responsive-type": "^1.0.0"
+    "postcss-responsive-type": "^1.0.0",
+    "swiper": "^6.8.2"
   },
   "babel": {
     "presets": [
