--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-nunjucks": "^5.1.0",
     "gulp-postcss": "^9.0.0",
-    "gulp-pug": "^4.0.1",
+    "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
@@ -41,6 +41,7 @@
     "imagemin-pngquant": "^9.0.1",
     "postcss": "^8.2.4",
     "pug": "^3.0.0",
+    "sass": "^1.42.1",
     "smart-grid": "^2.1.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
@@ -48,7 +49,9 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "instafeed.js": "^2.0.0-rc3",
     "postcss-responsive-type": "^1.0.0",
+    "smooth-scrollbar": "^8.6.3",
     "swiper": "^6.8.2"
   },
   "babel": {
